# VirtualReality

Projet/: Nouveau document texte.txt
Projet/animationExemple/: animationExemple.sln
Projet/animationExemple/Debug/: animationExemple.ilk
Projet/animationExemple/animationExemple/: ReadMe.txt  animationExemple.cpp  animationExemple.vcxproj  animationExemple.vcxproj.filters  stdafx.cpp
Projet/animationExemple/animationExemple/Debug/: CL.read.1.tlog  CL.write.1.tlog  animationExemple.lastbuildstate  animationExemple.pch  animationExemple_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
camera_calibration/__MACOSX/camera_calibration/: ._camera_calibration.cpp
camera_calibration/__MACOSX/camera_calibration/cmake/: ._FindOpenCV.cmake
camera_calibration/camera_calibration/: Makefile  camera_calibration.cpp  out_camera_data.xml
rv_td1/rv_td1/: Camera.pde  Cube.pde  GeometryNode.pde  MaterialNode.pde  NodeModifier.pde  SceneNode.pde  ShapeNode.pde  TransformationNode.pde  rv_td1.pde
rv_td1/rv_td1/data/: data.x3d  data.x3d~  test.x3d~
tracking/__MACOSX/tracking/: ._src
tracking/__MACOSX/tracking/cmake/: ._FindVRPN.cmake
tracking/immersion/: immersion.pde
tracking/tracking/: .lock-waf_darwin_build  .lock-waf_linux2_build  CMakeLists.txt
tracking/tracking/src/: interactionServer.cpp  tracking.files  vrpnTrackerColors.cpp  vrpnTrackerColors.hpp
tracking/vrpn_java/vrpn_java/: vrpn_java.pde
(+28 files in other folders)
